# symmetrical-octo-draw

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
radkit-docs/: AGENTS.md  Cargo.toml  README.md  llms.txt
radkit-docs/examples/: core_minimal.rs  runtime_full.rs  tool_usage.rs
src/: agent.rs  main.rs  model.rs  server_state.rs  state.rs
src/components/: mod.rs  settings.rs
src/tools/: board.rs  ddg.rs  mod.rs
src/views/: home.rs  mod.rs
