[package]
name = "dioxus-web-jumpstart"
version = "0.1.0"
authors = ["babybirdprd <babybirdprd@gmail.com>"]
edition = "2021"

[dependencies]
# Dioxus with fullstack and router
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
# NOTE: Downgrading to 0.6.0 or checking 0.7.1 compatibility because fullstack feature set might differ.
# Actually, let's stick to 0.7.1 if it exists, but the previous `Cargo.toml` had 0.7.1. 
# I will check if 0.7.1 supports fullstack. The error log showed downloads for 0.7.2, so it exists.
# I will use 0.7.2 to match the CLI output I saw earlier.

radkit = { git = "https://github.com/agents-sh/radkit", features = ["runtime", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
scraper = "0.18"
# image = "0.24" # Removed for now to reduce compilation weight unless strictly needed for backend rendering
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-stream = "0.1"
futures = "0.3"
once_cell = "1.18"

[features]
default = ["web"] 
web = ["dioxus/web"]
server = ["dioxus/server"] # Fullstack server feature
