[package]
name = "dioxus-web-jumpstart"
version = "0.1.0"
authors = ["babybirdprd <babybirdprd@gmail.com>"]
edition = "2021"

[dependencies]
# Dioxus with fullstack and router
dioxus = { version = "0.7.1", features = ["fullstack", "router"] } 
# I will check if 0.7.1 supports fullstack. The error log showed downloads for 0.7.2, so it exists.
# I will use 0.7.2 to match the CLI output I saw earlier.

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
futures = "0.3"
once_cell = "1.18"

# Server-only dependencies (native builds only, not WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
radkit = { git = "https://github.com/agents-sh/radkit", features = ["runtime", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
scraper = "0.18"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"] 
web = ["dioxus/web"]
server = ["dioxus/server"] # Fullstack server feature
